add: print table function

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Farhad Uneci &bullet; 9708253</title>
 </head>
 
-<body class="grid font-main bg-gray-100 h-full">
+<body class="grid grid-rows-[auto,1fr,auto] font-main bg-gray-100 h-full">
     <div class="flex flex-col justify-center bg-gray-200 p-5 border-b-4 border-gray-300">
         <h1 class="font-semibold text-3xl text-gray-900">
             Artificial Intelligence course, Final Project
@@ -20,8 +20,11 @@
         </h2>
     </div>
 
-    <main class="p-5">
-        <p>hello</p>
+    <main class="p-5 mx-auto">
+        <h3 class="text-3xl font-bold mb-5">
+            Game result
+        </h3>
+        <table id="table" class="table-fixed border-collapse border-2 h- border-gray-300"></table>
     </main>
 
     <footer class="w-full p-4 bg-black">
