refactore!: add webpack to project

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
     <title>Farhad Uneci &bullet; 9708253</title>
 </head>
 
@@ -33,7 +32,7 @@
         </p>
     </footer>
 
-    <script src="./index.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
