add: miniMax move & alpha-beta added

--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,23 @@
     </div>
 
     <main class="p-5 mx-auto">
-        <h3 class="text-3xl font-bold mb-5">
-            Game result
+        <h3 class="text-5xl font-bold mb-8">
+            Game results
         </h3>
-        <table id="table" class="table-fixed border-collapse border-2 h- border-gray-300"></table>
+        <h3 class="text-3xl font-bold mb-5">
+            Random Game
+        </h3>
+        <table id="table1" class="table-fixed border-collapse border-2 border-gray-300"></table>
+        <br>
+        <h3 class="text-3xl font-bold mb-5">
+            MiniMax Algorithm
+        </h3>
+        <table id="table2" class="table-fixed border-collapse border-2 border-gray-300"></table>
+        <br>
+        <h3 class="text-3xl font-bold mb-5">
+            Alpha-beta Algorithm
+        </h3>
+        <table id="table3" class="table-fixed border-collapse border-2 border-gray-300"></table>
     </main>
 
     <footer class="w-full p-4 bg-black">
