--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,9 @@
     <main class="p-5 mx-auto">
         <h3 class="text-5xl font-bold mb-8">
             Game results
+            <p class="text-xl text-gray-600 font-semibold mt-2">
+                Visit Developer's <b class="text-green-600">"console"</b> for related information about game results.
+            </p>
         </h3>
         <h3 class="text-3xl font-bold mb-5">
             Random Game
